Syncing Remote and local

--- a/wp/wp-content/themes/icuinparis/style.css
+++ b/wp/wp-content/themes/icuinparis/style.css
@@ -378,7 +378,7 @@ footer a:hover{
     text-transform: uppercase;
     font-weight: bold;
     width: 157px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 /*****************************************************************************
