responsive styling for the login-signup form

--- a/store/app/design/frontend/icu/icu/template/customer/form/login.phtml
+++ b/store/app/design/frontend/icu/icu/template/customer/form/login.phtml
@@ -73,7 +73,7 @@
 
     <p><input type="checkbox" class="checkbox" id="is_subscribed" value="1" title="Sign Up for Newsletter" name="is_subscribed"> Check to sign up for the ICU Newsletter  (click <a href="#" onclick="MM_openBrWindow('<?= $this->getUrl().'newsletter-sample.html' ?>','newsletter','scrollbars=yes,width=860,height=640')">here</a> for sample newsletter)</p>
     <input class="icu-btn" type="submit" value="Register" />
-    <p>by clicking the &#8220;Submit&#8221; form above, you are agreeing to ICU&#8216;s 
+    <p>by submitting the form above, you agree to ICU&#8216;s 
     <a href="#" onclick="MM_openBrWindow('<?= $this->getUrl().'terms-conditions.html' ?>','termsconditions','scrollbars=yes,width=720,height=460')">terms &amp; conditions</a>.</p>
   </form>
 </div>
