--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -14,7 +14,7 @@ a{
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .navbar-inner{
-    min-height: none;
+    min-height: 0;
 }
 .navbar .brand{
     padding: 0px 20px;
@@ -150,7 +150,7 @@ h1{
     margin-bottom: 0;
 }
 #footer h4{
-    font-size: 2.4em;
+    font-size: 1.8em;
     font-weight: normal;
 }
 #footer p{
