Blog post single updated, like a boss.

--- a/php/ored-styles.css
+++ b/php/ored-styles.css
@@ -132,12 +132,11 @@ h1{
 
 #footer {
     border-top: opx solid #676D76;
-    color: #545454;
-    padding: 4.236em 0 2.618em;
-    height:400px;
-}
 
-#footer {
+    padding-top: 42px;
+    padding-bottom: 26px;
+    margin-top: 50px;
+    height:400px;
     color: #d1d1d1;
     text-align:center;
     background-image: url('../wp/wp-content/themes/icuinparis/img/bkgr_foot.jpg');
