--- a/wp/wp-content/themes/icuinparis/style.css
+++ b/wp/wp-content/themes/icuinparis/style.css
@@ -380,6 +380,42 @@ footer a:hover{
     width: 157px;
     text-align: center;
 }
+/*****************************************************************************
+/*****************************************************************************
+/* @Post @single */
+/*****************************************************************************
+/*****************************************************************************/
+#post_content{
+    border-top: 2px solid #eaeaea;
+    padding-top: 20px;
+    margin-top:20px;
+}
+#post_content h2{
+    font-size: 5.2em;
+    font-family: "Gotham-Light", sans-serif;
+}
+#social_sharing li{
+    list-style: none;
+    display: inline;
+    margin-left: 20px;
+}
+#social_sharing li.twitter-share{
+    margin-left: -20px;
+}
+.fb_comments{
+    display: block;
+}
+#post_nav div{ display: inline-block;}
+#post_nav a{
+    background-color: #000;
+    color: #fff;
+    margin: 5px;
+    text-transform: uppercase;
+    font-size: 2.7em;
+    font-family: "Gotham-Light", sans-serif;
+    display:block;
+    padding: 10px;
+}
 
 /*****************************************************************************
 /*****************************************************************************
